--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "PancakeSwap",
-  "name": "PancakeSwap",
+  "short_name": "VizslaSwap",
+  "name": "VizslaSwap",
   "homepage_url": "https://vizslaswap.com",
   "farmpage_url": "https://vizslaswap.com/farms",
   "poolspage_url": "https://vizslaswap.com/pools/all",
