--- a/manifest.json
+++ b/manifest.json
@@ -7,9 +7,14 @@
   "description": "",
   "icons": [
     {
-      "src": "favicon.png",
+      "src": "favicon.ico",
       "type": "image/png",
       "sizes": "256x256"
+    },
+    {
+      "src": "logo.png",
+      "type": "image/png",
+      "sizes": "512x512"
     }
   ],
   "start_url": ".",
