--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
   "icons": [
     {
       "src": "favicon.ico",
-      "type": "image/png",
+      "type": "image/x-icon",
       "sizes": "256x256"
     },
     {
