--- a/manifest.json
+++ b/manifest.json
@@ -7,8 +7,8 @@
   "description": "",
   "icons": [
     {
-      "src": "favicon.ico",
-      "type": "image/x-icon",
+      "src": "favicon.png",
+      "type": "image/png",
       "sizes": "256x256"
     },
     {
